--- a/9_regressions_updated.Rmd
+++ b/9_regressions_updated.Rmd
@@ -206,3 +206,160 @@ interactions <- lm_robust(
   most_recent, clusters = zip, se_type = "CR0")
 ```
 
+
+```{r}
+# County level
+
+county_dems <- lm_robust(
+  days_to_approval ~ 1 + 
+    median_income + 
+    black_percent +
+    white_percent +
+    high_school_pct + 
+    married_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate,
+  most_recent_county, clusters = zip, se_type = "CR0")
+```
+
+
+```{r}
+county_loan <- lm_robust(
+  days_to_approval ~ 1 + 
+    median_income + 
+    black_percent +
+    white_percent +
+    high_school_pct + 
+    married_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + 
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    preference + 
+    requirement + 
+    bank_ppp_issued + 
+    jobs_reported,
+  most_recent_county, clusters = zip, se_type = "CR0")
+```
+
+
+```{r}
+county_econ <- lm_robust(
+  days_to_approval ~ 1 + 
+    median_income + 
+    black_percent +
+    white_percent +
+    high_school_pct + 
+    married_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + 
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    preference + 
+    requirement + 
+    bank_ppp_issued + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent,
+  most_recent_county, clusters = zip, se_type = "CR0")
+```
+
+
+```{r}
+county_covid <- lm_robust(
+  days_to_approval ~ 1 + 
+    median_income + 
+    black_percent +
+    white_percent +
+    high_school_pct + 
+    married_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + 
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    preference + 
+    requirement + 
+    bank_ppp_issued + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent + 
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current,
+  most_recent_county, clusters = zip, se_type = "CR0")
+```
+
+
+```{r}
+county_interactions <- lm_robust(
+  days_to_approval ~ 1 + 
+    median_income + 
+    black_percent +
+    white_percent +
+    high_school_pct + 
+    married_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + 
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    preference + 
+    requirement + 
+    bank_ppp_issued + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent + 
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths +
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current +
+    I(black_percent^2) + 
+    I(white_percent^2) + 
+    I(black_percent * median_income) +
+    I(black_percent * republican_percent) +
+    I(black_percent * pop_den) + 
+    I(black_percent * estimate_gini_index) +
+    I(black_percent * violent_crime_rate),
+  most_recent_county, clusters = zip, se_type = "CR0")
+
+```
+
